alright adding in some frontend

--- a/src/App.html
+++ b/src/App.html
@@ -1,1 +1,11 @@
-<h1>Hello!</h1>
+<Navbar></Navbar>
+<Footer></Footer>
+
+<script>
+    import Navbar from "./components/Navbar.html";
+    import Footer from "./components/Footer.html";
+
+    export default {
+        components: { Navbar, Footer }
+    }
+</script>
